[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fintrack"
version = "1.0.0"
description = "A professional CLI personal finance tracker"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["finance", "cli", "budget", "expense-tracker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = []          # zero external runtime deps!

[project.scripts]
fintrack = "fintrack.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["fintrack*"]
